<resources>
    <string name="app_name">Project3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="intro_edittext_email_hint">Email</string>
    <string name="intro_button_login">LOG IN</string>

    <string name="activity_favorite">Favorite</string>
    <string name="activity_feed">Feed</string>
    <string name="activity_profile">My Profile</string>

    <string name="intro_button_signup">Sign up</string>
    <string name="signup_hint_email">Email</string>
    <string name="signup_hint_username">User Name</string>
    <string name="signup_hint_location">Location</string>
    <string name="signup_title">New User</string>
    <string name="signup_hint_birthday">Birthday(YYYY/MM/DD)</string>
    <string name="signup_hint_password">Password</string>
    <string name="signup_hint_bio">Tell us about yourself!</string>
    <string name="signup_button_submit">Submit</string>
    <string name="subtitle_post_list">Posts</string>
    <string name="view_post_message">feed message</string>
    <string name="view_post_id">Username</string>
    <string name="view_post_date">Posted Date</string>
    <string name="subtitle_new_post">New Post</string>
    <string name="fragment_post_message_empty">Empty Message!</string>
    <string name="title_activity_user_info">UserInfo</string>
    <string name="user_photo">User photo</string>
    <string name="user_favorite">Follow</string>
    <string name="button_back">Back</string>
    <string name="new_password">New Password</string>
    <string name="fragment_post_cancel">Cancel</string>
    <string name="subtitle_favorite_list">Favorites</string>
    <string name="title_text">FaceBlock</string>
    <string name="intro_edittext_username_hint">Username</string>
    <string name="signup_hint_picture">ImageURL</string>
    <string name="signup_toast">Take a photo by tapping on the picture!</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="user_info_not_valid_string">Not a valid input!</string>
    <string name="signup_empty_input">At least one empty input!</string>
    <string name="signup_error_input">Wrong user name or password!</string>
</resources>
