<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    tools:context="csc296.project2.control.User.UserInfo">

    <View
        android:layout_width="match_parent"
        android:layout_height="20dip"
        android:background="#fff"
        android:id="@+id/activity_user_info_blank">

    </View>
    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/activity_user_info_selfie"
        android:scaleType="centerCrop"
        android:background="#000000"
        android:layout_below="@+id/activity_user_info_blank"
        android:layout_centerHorizontal="true">
    </ImageView>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_favorite"
        android:id="@+id/activity_user_info_favorite"
        android:layout_below="@+id/activity_user_info_selfie"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/signup_hint_picture"
        android:id="@+id/activity_user_info_picture"
        android:layout_below="@+id/activity_user_info_favorite"
        android:layout_alignStart="@+id/activity_user_info_username"
        android:layout_toStartOf="@+id/activity_user_info_back" />

    <!--Name-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/signup_hint_username"
        android:id="@+id/activity_user_info_username"
        android:layout_below="@+id/activity_user_info_picture"
        android:layout_centerHorizontal="true" />

    <!-- homeTown-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_user_info_location"
        android:hint="@string/signup_hint_location"
        android:ems="10"
        android:layout_below="@+id/activity_user_info_username"
        android:layout_centerHorizontal="true" />


    <!-- Birthday-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_user_info_birthday"
        android:hint="@string/signup_hint_birthday"
        android:ems="10"
        android:inputType="date"
        android:layout_below="@+id/activity_user_info_location"
        android:layout_centerHorizontal="true" />

    <!-- Password -->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_user_info_password"
        android:ems="10"
        android:hint="@string/signup_hint_password"
        android:inputType="textPassword"
        android:layout_below="@+id/activity_user_info_birthday"
        android:layout_centerHorizontal="true" />

    <!-- BIO-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_user_info_bio"
        android:ems="40"
        android:hint="@string/signup_hint_bio"
        android:inputType="textMultiLine"
        android:layout_below="@+id/activity_user_info_password"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_button_submit"
        android:id="@+id/activity_user_info_submit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:id="@+id/activity_user_info_back"
        android:layout_alignBottom="@+id/activity_user_info_submit"
        android:layout_alignParentEnd="true" />




</RelativeLayout>
