<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="csc296.project2.control.SignupDialog">

    <!-- TODO: Update blank fragment layout -->


      <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
          android:orientation="vertical"
          android:layout_width="150dp"
          android:layout_height="150dp"
          android:id="@+id/signup_imageview_selfie"
          android:scaleType="centerCrop"
          android:background="#000000"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true">
      </ImageView>

      <!--Picture URL-->
      <EditText
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:hint="@string/signup_hint_picture"
          android:id="@+id/signup_edittext_picutre"
          android:layout_below="@+id/signup_imageview_selfie"
          android:layout_alignEnd="@+id/signup_edittext_username"
          android:layout_alignStart="@+id/signup_edittext_username" />

    <!--Name-->
      <EditText
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:ems="10"
          android:hint="@string/signup_hint_username"
          android:id="@+id/signup_edittext_username"
          android:layout_below="@+id/signup_edittext_picutre"
          android:layout_centerHorizontal="true" />

      <!-- homeTown-->
      <EditText
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/signup_edittext_location"
          android:hint="@string/signup_hint_location"
          android:ems="10"
          android:layout_below="@+id/signup_edittext_username"
          android:layout_centerHorizontal="true" />


      <!-- Birthday-->
      <EditText
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/signup_edittext_birthday"
          android:hint="@string/signup_hint_birthday"
          android:ems="10"
          android:inputType="date"
          android:layout_below="@+id/signup_edittext_location"
          android:layout_centerHorizontal="true" />

    <!-- Password -->
      <EditText
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/signup_edittext_password"
          android:ems="10"
          android:hint="@string/signup_hint_password"
          android:inputType="textPassword"
          android:layout_below="@+id/signup_edittext_birthday"
          android:layout_centerHorizontal="true" />

      <!-- BIO-->
      <EditText
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/signup_edittext_bio"
          android:ems="40"
          android:hint="@string/signup_hint_bio"
          android:inputType="textMultiLine"
          android:layout_below="@+id/signup_edittext_password"
          android:layout_centerHorizontal="true" />

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/signup_button_submit"
          android:id="@+id/signup_button_submit"
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true" />






</RelativeLayout>
