<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="csc296.project2.control.PostBoard.ViewPostDialog"
    android:background="#deadbeef">

    <View
        android:layout_width="fill_parent"
        android:layout_height="20dip"
        android:id="@+id/fragment_view_post_topline"
        android:background="#9f9" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_view_post_innerlayout"
        android:layout_below="@+id/fragment_view_post_topline"
        android:layout_alignParentStart="true">

        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/fragment_view_post_selfie"
            android:scaleType="centerCrop"
            android:contentDescription="@string/user_photo"
            android:background="#000000"
            android:layout_centerHorizontal="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_view_post_username"
            android:text="@string/signup_hint_username"
            android:layout_alignTop="@+id/fragment_view_post_selfie"
            android:layout_toEndOf="@+id/fragment_view_post_selfie" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_view_post_date"
            android:text="@string/view_post_date"
            android:layout_below="@+id/fragment_view_post_username"
            android:layout_toEndOf="@+id/fragment_view_post_selfie" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_view_post_message"
            android:text="@string/view_post_message"
            android:layout_below="@+id/fragment_view_post_date"
            android:layout_toEndOf="@+id/fragment_view_post_selfie" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="20dip"
        android:id="@+id/fragment_view_post_bottomline"
        android:background="#9f9"
        android:layout_below="@+id/fragment_view_post_innerlayout"
        android:layout_alignParentStart="true" />

</RelativeLayout>
