<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cfc">

    <View
        android:layout_width="fill_parent"
        android:layout_height="20dip"
        android:id="@+id/view_post_line"
        android:background="#cfc" />

    <ImageView
        android:layout_width="50dp"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:background="#000"
        android:scaleType="centerCrop"
        android:id="@+id/view_post_image"
        android:layout_below="@+id/view_post_line"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/view_post_id"
        android:id="@+id/view_post_id"
        android:layout_alignTop="@+id/view_post_image"
        android:layout_toEndOf="@+id/view_post_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/view_post_date"
        android:id="@+id/view_post_date"
        android:layout_below="@+id/view_post_id"
        android:layout_toEndOf="@id/view_post_image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_post_message"
        android:textSize="18sp"
        android:text="@string/view_post_message"
        android:layout_below="@id/view_post_date"
        android:layout_toEndOf="@id/view_post_image" />






</RelativeLayout>